Endpoints quase finalizados, faltando apenas o 'search'
